# Rust_Invest

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PORTS.md  SYSTEM_GUIDE.md  docker-compose.prod.yml  nginx.conf  report.html  rust_invest.db
config/: assets.json  ensemble_overrides.json  threshold_overrides.json
deploy/: README.md  setup-hetzner.sh  update.sh
docs/: DATA_DICTIONARY.md  honest-metrics-overhaul.md
exports/: accuracy_by_asset.csv  analysis_report.md  backtest_comparison.csv  backtest_report.md  daily_tracker.csv  data_quality.txt  holdings_performance.csv  signals_all.csv
frontend/: index.html  package-lock.json  vite.config.ts
frontend/reports/: walkforward_backtest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  SignalCard.tsx  UserHoldings.tsx
frontend/src/lib/: api.ts  auth.tsx  classify.ts  plain-english.ts  types.ts
frontend/src/pages/: About.tsx  Admin.tsx  Advisor.tsx  AuthCallback.tsx  Crypto.tsx  Dashboard.tsx  DeepDive.tsx  Diagnostics.tsx  Explore.tsx  FX.tsx  Feedback.tsx  History.tsx  Home.tsx  Login.tsx  MyPortfolio.tsx  Overview.tsx  Portfolio.tsx  Predictions.tsx  Privacy.tsx  Register.tsx  Settings.tsx  Simulate.tsx  Simulator.tsx  Stocks.tsx  SystemHealth.tsx  Terms.tsx  TrackRecord.tsx  Training.tsx  Truth.tsx
nginx/: finopsmind-fixed  install.sh  rustinvest
reports/: baseline.json  feature_importance.json  improved.json  improvement_report.html  train_20260306.txt  train_20260306_v2.txt  training_log.txt  training_log_v10.txt  training_log_v9.txt  validate.txt  validate_20260306_30d.txt  validate_post_v2.txt
scripts/: install_cron.sh  weekly_retrain.sh
src/: Cargo.toml.additions  PHASE6_README.md  README.md  agent.rs  analysis.rs  auth.rs  backtest_compare.rs  backtester.rs  charts.rs  config.rs  crypto.rs  crypto_features.rs  daily_tracker.rs  db.rs  diagnostics.rs  email_alerts.rs  enriched_signals.rs  ensemble.rs  equity_data.rs  features.rs  forex_features.rs  gbt.rs  gru.rs  hints.rs  inference.rs  lgbm.rs  lib.rs  llm.rs  lstm.rs  macro_data.rs  main.rs  market_regime.rs  ml.rs  model_store.rs  models.rs  news_sentiment.rs  onchain_data.rs  pg.rs  polygon.rs  portfolio.rs  (+10 more)
src/agents/: data_quality.rs  mod.rs  model_drift.rs  performance_analyst.rs  portfolio_rebalancer.rs  risk_guardian.rs  signal_arbitrator.rs
