[package]
name = "rust_invest"
version = "0.1.0"
edition = "2021"
default-run = "rust_invest"

[lib]
name = "rust_invest"
path = "src/lib.rs"

[[bin]]
name = "rust_invest"
path = "src/main.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "signal"
path = "src/bin/signal.rs"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[[bin]]
name = "export_csv"
path = "src/bin/export_csv.rs"

[[bin]]
name = "backtest_report"
path = "src/bin/backtest_report.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dotenvy = "0.15"

# Candle ML framework — with Metal GPU acceleration for Apple Silicon
# The "metal" feature routes tensor ops (matmul, LSTM forward/backward)
# through Apple's Metal GPU shaders instead of CPU.
# The "accelerate" feature uses Apple's Accelerate framework (vecLib/BLAS)
# for optimised CPU linear algebra when tensors are on CPU.
candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
safetensors = "0.4"

# Rayon — data-parallel iterator library for CPU-bound work.
# Used to parallelise GBT tree building (feature-scan loop) and
# diagnostic walk-forward folds across CPU cores.
rayon = "1.10"

# Axum web framework for the serve binary (API server)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Auth dependencies
bcrypt = "0.17"
jsonwebtoken = "9"
rand = "0.8"
oauth2 = "4"
url = "2"
urlencoding = "2"

[features]
default = []
# Metal GPU acceleration for Apple Silicon (M1/M2/M3/M4).
# On macOS, build with: cargo build --features metal,accelerate
metal = ["candle-core/metal"]
# Apple Accelerate BLAS for optimised CPU fallback
accelerate = ["candle-core/accelerate"]
