[package]
name = "rust_invest"
version = "0.1.0"
edition = "2021"
default-run = "rust_invest"

[lib]
name = "rust_invest"
path = "src/lib.rs"

[[bin]]
name = "rust_invest"
path = "src/main.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "signal"
path = "src/bin/signal.rs"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[[bin]]
name = "export_csv"
path = "src/bin/export_csv.rs"

[[bin]]
name = "backtest_report"
path = "src/bin/backtest_report.rs"

[[bin]]
name = "backtest_walkforward"
path = "src/bin/backtest_walkforward.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[[bin]]
name = "rebuild_portfolio"
path = "src/bin/rebuild_portfolio.rs"

[[bin]]
name = "agents"
path = "src/bin/agents.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dotenvy = "0.15"

# Candle ML framework — with Metal GPU acceleration for Apple Silicon
# The "metal" feature routes tensor ops (matmul, LSTM forward/backward)
# through Apple's Metal GPU shaders instead of CPU.
# The "accelerate" feature uses Apple's Accelerate framework (vecLib/BLAS)
# for optimised CPU linear algebra when tensors are on CPU.
candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
safetensors = "0.4"

# LightGBM — high-performance gradient boosting via Rust bindings.
# Leaf-wise growth, histogram splitting, native L1/L2 regularization.
# Requires: cmake, clang, libclang-dev on build machine.
lightgbm3 = "1.0"

# Rayon — data-parallel iterator library for CPU-bound work.
# Used to parallelise GBT tree building (feature-scan loop) and
# diagnostic walk-forward folds across CPU cores.
rayon = "1.10"

# Axum web framework for the serve binary (API server)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Auth dependencies
bcrypt = "0.17"
jsonwebtoken = "9"
rand = "0.8"
oauth2 = "4"
url = "2"
urlencoding = "2"

# Email alerts
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# PostgreSQL — primary data store for signals, portfolio, and metrics.
# Replaces SQLite for the signal pipeline. Max pool: 15 connections.
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1"] }

# nalgebra — linear algebra for closed-form Ridge regression
nalgebra = "0.33"

# futures — combinators for async tasks (join_all in agent fleet)
futures = "0.3"

[features]
default = []
# Metal GPU acceleration for Apple Silicon (M1/M2/M3/M4).
# On macOS, build with: cargo build --features metal,accelerate
metal = ["candle-core/metal"]
# Apple Accelerate BLAS for optimised CPU fallback
accelerate = ["candle-core/accelerate"]
